Fixed text overflow & code commented half of style.css file

--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,16 @@
 
 body {margin:0;}
 
+/***Start PSU Banner  ***/
 .icon-bar {
   width: 100%;
-  height: 100px;
+  height: relative;
   background-color: #1E407C;
   overflow: auto;
 }
+/***End PSU Banner ***/
 
+/***Start PSU img logo  ***/
 .icon-bar img {
   float: left;
   width: 20%;
@@ -22,61 +25,74 @@ body {margin:0;}
   color: white;
   font-size: 64px;
 }
+/***End PSU img logo ***/
 
-.icon-bar a:hover {
-  background-color: #000;
-}
-
-.active {
-  background-color: blue;
-}
-
+/*** Start of text fitting inside box ***/
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+/*** End of text fitting inside box ***/
 
-html, body {
-  font-size: 62.5%;
-}
 
+/*** Start of page background ***/
 body {
   background: #F5F5F5;
   overflow: hidden;
 }
+/*** End of page background ***/
 
+/*** Start of entire box sizing Pt.1 ***/
+html, body {
+  font-size: 62.5%;
+}
+/*** End of entire box sizing Pt.1 ***/
+
+/*** Start of outer box sizing/positioning Pt.2 ***/
 .demo {
   position: absolute;
   left: 50%;
   top: 50%;
   width: 50.6rem;
-  height: 54rem;
+  height: 60rem;
   margin-left: -25.3rem;
-  margin-top: -23rem;
+  margin-top: -19rem;
   background: #F6F6F5;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.9rem 1rem rgba(0, 0, 0, 0.2);
 }
+/*** End of outer box sizing/positioning Pt.2 ***/
+
+/*** Start of banner of outer box ***/
 .demo__header {
   height: 6rem;
   background: #002942;
 }
+/*** End of banner of outer box ***/
+
+/*** Start of text content within box below img ***/
 .demo__content {
   overflow: hidden;
   position: relative;
   height: 48rem;
-  padding-top: 4.5rem;
+  padding-top: 3.5rem;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
+/*** End of text content within box below img ***/
+
+/*** Start size of the card content(Green/Orange cards) when car is swiped Pt.1 ***/
 .demo__card-cont {
   position: relative;
   width: 44rem;
-  height: 32rem;
-  margin: 0 auto 5rem;
+  height: 43rem;
+  margin: 0 auto 9rem;
 }
+/*** End of size of the card content(Green/Orange cards) when car is swiped Pt.1***/
+
+/*** Start size of the Green/Orange swipe interaction sizes Pt.2 ***/
 .demo__card {
   z-index: 2;
   position: absolute;
@@ -87,6 +103,8 @@ body {
   -webkit-transform-origin: 50% 100%;
           transform-origin: 50% 100%;
 }
+/***End size of the Green/Orange swipe interaction sizes Pt.2 ***/
+
 .demo__card.reset {
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
@@ -114,28 +132,7 @@ body {
 .demo__card.below {
   z-index: 1;
 }
-.demo__card__top {
-  height: 20.5rem;
-  padding-top: 4rem;
-}
-.demo__card__top.purple {
-  background: #7132B9;
-}
-.demo__card__top.blue {
-  background: #248CB6;
-}
-.demo__card__top.indigo {
-  background: #303F9F;
-}
-.demo__card__top.cyan {
-  background: #26C6DA;
-}
-.demo__card__top.lime {
-  background: #AFB42B;
-}
-.demo__card__top.brown {
-  background: #795548;
-}
+
 .demo__card__img {
   overflow: hidden;
   width: 20rem;
@@ -146,16 +143,14 @@ body {
   background-image: url("//s3-us-west-2.amazonaws.com/s.cdpn.io/142996/profile/profile-512_5.jpg");
   background-size: cover;
 }
-.demo__card__name {
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #fff;
-}
+
+/*** Start of size of box within the outer box that contains image and text field  ***/
 .demo__card__btm {
-  height: 7.5rem;
+  height: 16.5rem;
   background: #F5F5F5;
 }
+/*** End of size of box within the outer box that contains image and text field  ***/
+
 .demo__card__we {
   text-align: center;
   font-size: 3.0rem;
